tests/typec-test/test_out/fake-return.txt
error: type or module not found
 --> fake-return\root.ctl:3:5
  |
3 |     A\{ }
  |     ^ this does not exist
  |
  = info: queried 'A'

info: tir repr of functions:
 

